# pymaxgram

./: .gitignore  CLAUDE.md  README.md  max-bot-api.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  release.yml
docs/: conf.py  index.md  index.rst  requirements.txt
docs/_static/: custom.css
docs/api/: exceptions.md  exceptions.rst  index.md  index.rst
docs/examples/: callback_data.md  callback_data.rst  class_handlers.md  class_handlers.rst  commands.md  commands.rst  echo_bot.md  echo_bot.rst  files.md  files.rst  formatting.md  formatting.rst  fsm.md  fsm.rst  index.md  index.rst  keyboards.md  keyboards.rst  middleware.md  middleware.rst
docs/getting-started/: index.md  index.rst  installation.md  installation.rst  quickstart.md  quickstart.rst
docs/guide/: bot.md  bot.rst  dispatcher.md  dispatcher.rst  errors.md  errors.rst  files.md  files.rst  filters.md  filters.rst  formatting.md  formatting.rst  fsm.md  fsm.rst  handlers.md  handlers.rst  index.md  index.rst  keyboards.md  keyboards.rst  middlewares.md  middlewares.rst  webhook.md  webhook.rst
maxgram/: __init__.py  __meta__.py  exceptions.py  loggers.py
maxgram/client/: __init__.py  bot.py  context_controller.py  default.py  max_api.py
maxgram/dispatcher/: dispatcher.py  router.py
maxgram/enums/: __init__.py  attachment_type.py  button_type.py  chat_action.py  chat_admin_permission.py  chat_status.py  content_type.py  markup_type.py  parse_mode.py  update_type.py  upload_type.py
maxgram/filters/: __init__.py  base.py  callback_data.py  command.py  exception.py  logic.py  (+2 more)
(+205 files in other folders)
